# kub

./: README.md  guia_p2.txt  worker.sh
fileManager/: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  client  cmake_install.cmake  compile.sh  filemanager-deployment.yaml  filemanager-service.yaml  server
fileManager/cliente/: Dockerfile  clientFileManager.cpp  clientFileManager.h  cliente.cpp  compile.sh  filemanager.h  main_filemanager.cpp  operaciones.h  utils.cpp  utils.h
fileManager/cliente/files/: hola.txt
fileManager/servidor/: Dockerfile  compile.sh  conexion_cliente.h  filemanager.cpp  main_servidor.cpp  operaciones.h  serverFileManager.cpp  serverFileManager.h  servidor  servidor.cpp
fileManager/servidor/files/: hola.txt  nuevo_fichero.txt
multMatrix/: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  clientMatrix  clientMatrix.cpp  clientMatrix.h  cliente  cmake_install.cmake  compile.sh  conexion_cliente.h  main_multMatrix.cpp  multmatrix-deployment.yaml  multmatrix-service.yaml  operacionesMatrix.h  resultado.txt  resultado2.txt  serverMatrix  serverMatrix.cpp  servidor  utils.cpp
multMatrix/cliente/: clientMatrix.cpp  clientMatrix.h  cliente  compile.sh  main_multMatrix.cpp  multmatrix.cpp  multmatrix.h  operacionesMatrix.h  utils.h
multMatrix/servidor/: compile.sh  conexion_cliente.h  operacionesMatrix.h  serverMatrix.cpp  servidor
multMatrix/servidor/files/: resultado.txt  resultado2.txt
scriptsKubernetes/: master.sh
